# mmp

./: Cargo.toml  README.md  flake.nix  pwd.json  pwd.toml  pwd.yaml
src/: main.rs
