[package]
name = "mmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.10.1"
orion = "0.17.6"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
